--- a/final_assignment.ipynb
+++ b/final_assignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNsRWUIy+DNhSTmp59DUlEi",
+      "authorship_tag": "ABX9TyMYeU5Wux8Xdq510/MhFnjd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,33 +27,316 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Case Study: Statistical Analysis on Diabetes Dataset"
+      ],
+      "metadata": {
+        "id": "Hvqi6nKhh-_R"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Objective : We aim to determine whether specific physiological features (Glucose, BMI, Age, etc.) differ significantly between diabetic and non-diabetic individuals"
+      ],
+      "metadata": {
+        "id": "2HIQBO79iJ8h"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "from scipy import stats\n",
+        "from statsmodels.stats.weightstats import ztest\n",
+        "\n",
+        "# Load dataset\n",
+        "df = pd.read_csv(\"diabetes.csv\")\n",
+        "\n",
+        "# --- Handle Missing or Null Values ---\n",
+        "# Replace 0 values in certain physiological columns (where 0 is biologically invalid) with NaN\n",
+        "cols_with_zeros = [\"Glucose\", \"BloodPressure\", \"SkinThickness\", \"Insulin\", \"BMI\"]\n",
+        "df[cols_with_zeros] = df[cols_with_zeros].replace(0, np.nan)\n",
+        "\n",
+        "# Impute missing values using median (robust against outliers)\n",
+        "df = df.fillna(df.median(numeric_only=True))\n",
+        "\n",
+        "# Confirm no missing values remain\n",
+        "print(\"Missing values after cleaning:\\n\", df.isnull().sum())\n"
+      ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "exSx7QMQawUA",
-        "outputId": "1473dd4f-dca4-40e1-a2cb-3681e0f1b421"
+        "id": "6nqtEoeujKsj",
+        "outputId": "97c43648-c2d1-4e71-d9b6-ee7de3db3338"
       },
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "DATA ANALYTICS LAB\n"
+            "Missing values after cleaning:\n",
+            " Pregnancies                 0\n",
+            "Glucose                     0\n",
+            "BloodPressure               0\n",
+            "SkinThickness               0\n",
+            "Insulin                     0\n",
+            "BMI                         0\n",
+            "DiabetesPedigreeFunction    0\n",
+            "Age                         0\n",
+            "Outcome                     0\n",
+            "dtype: int64\n"
           ]
         }
-      ],
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "source": [
-        "print(\"DATA ANALYTICS LAB\")"
+        "In healthcare data, missing or zero values for physiological metrics (e.g., BMI = 0) are not real.\n",
+        "Imputing with median keeps the data distribution realistic while preserving sample size.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "0ab-LnkDjvxe"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Independent Two-Sample T-Test"
+      ],
+      "metadata": {
+        "id": "hTaTq3poj8zn"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Purpose: Compare means of a continuous variable between two independent groups (e.g., diabetics vs. non-diabetics).\n"
+      ],
+      "metadata": {
+        "id": "iVfzChOPkkY6"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Use case: Are mean glucose levels significantly higher in diabetic patients?"
+      ],
+      "metadata": {
+        "id": "1Z_8SqJ2kpc3"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Hypotheses:\n",
+        "\n",
+        "H₀: μ₁ = μ₂ (no difference)\n",
+        "\n",
+        "H₁: μ₁ ≠ μ₂ (significant difference)"
+      ],
+      "metadata": {
+        "id": "F-uXxmJck0DB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "group0 = df[df[\"Outcome\"] == 0][\"Glucose\"]\n",
+        "group1 = df[df[\"Outcome\"] == 1][\"Glucose\"]\n",
+        "t_stat, t_p = stats.ttest_ind(group0, group1, equal_var=False)\n",
+        "print(f\"T-test → statistic={t_stat:.4f}, p-value={t_p:.4f}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tvfCg0VuhnN5",
+        "outputId": "99d9f018-b935-48d5-dc10-0e14228ae256"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "T-test → statistic=-14.8527, p-value=0.0000\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Interpretation:\n",
+        "If p < 0.05 → Reject H₀ → Mean glucose differs significantly between diabetic and non-diabetic patients."
+      ],
+      "metadata": {
+        "id": "eWnBrUFRk7uJ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "Significance:\n",
+        "T-test helps validate that glucose is a key discriminative feature for diabetes diagnosis.\n"
+      ],
+      "metadata": {
+        "id": "nHexToBnlPvc"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Z-Test"
+      ],
+      "metadata": {
+        "id": "4NJ13oiKliJz"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Purpose: Similar to t-test, but used when sample size is large (n > 30) and population variance is known/approximated."
+      ],
+      "metadata": {
+        "id": "Cm0Q1A0lloSK"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Use case: Test if average BMI differs significantly across diabetic status."
+      ],
+      "metadata": {
+        "id": "4P0WxrWnlx92"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "z_stat, z_p = ztest(df[df[\"Outcome\"] == 0][\"BMI\"], df[df[\"Outcome\"] == 1][\"BMI\"])\n",
+        "print(f\"Z-test → statistic={z_stat:.4f}, p-value={z_p:.4f}\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ob-_NJCUl2aH",
+        "outputId": "655bb0f0-fc02-4c8c-efe1-7f6bb385ca68"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Z-test → statistic=-9.0901, p-value=0.0000\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Interpretation:\n",
+        "If p < 0.05 → BMI has a statistically significant difference between the two populations."
+      ],
+      "metadata": {
+        "id": "tw3_8HhjmGxl"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Significance:\n",
+        "Used to test large-sample mean differences in continuous data."
+      ],
+      "metadata": {
+        "id": "MvdDElmjmHhv"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "F-Test (Variance Comparison)"
+      ],
+      "metadata": {
+        "id": "QaBBujjsm1FF"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Purpose: Check if variances of two groups are significantly different."
+      ],
+      "metadata": {
+        "id": "zO85yR6Nm6_u"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Use case: Are age variances the same between diabetic and non-diabetic individuals?"
+      ],
+      "metadata": {
+        "id": "eIAE6DXgnGMs"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Hypotheses:\n",
+        "\n",
+        "H₀: σ₁² = σ₂²\n",
+        "\n",
+        "H₁: σ₁² ≠ σ₂²"
+      ],
+      "metadata": {
+        "id": "ltYjy9UsnTX5"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "age0 = df[df[\"Outcome\"] == 0][\"Age\"]\n",
+        "age1 = df[df[\"Outcome\"] == 1][\"Age\"]\n",
+        "\n",
+        "f_stat = np.var(age0, ddof=1) / np.var(age1, ddof=1)\n",
+        "df1, df2 = len(age0) - 1, len(age1) - 1\n",
+        "f_p = 1 - stats.f.cdf(f_stat, df1, df2)\n",
+        "print(f\"F-test → statistic={f_stat:.4f}, p-value={f_p:.4f}\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7d7PCKhTnWlv",
+        "outputId": "146773e5-40bf-4416-b5c7-dedd1b134858"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "F-test → statistic=1.1316, p-value=0.1284\n"
+          ]
+        }
       ]
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "Fu5HfT-Fa8Dt"
+        "id": "LcwLg5a2n3VI"
       },
       "execution_count": null,
       "outputs": []
